--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             57     77.03%
+				updated:             58     78.38%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            17     22.97%
+				outdated:            16     21.62%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:77%"></div>
+			<div class="updated" style="width:78%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:23%"></div>
+			<div class="outdated" style="width:22%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -874,7 +874,7 @@
 				<p>Touches up a few aspects of the mundane chat.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="no-fade">
