--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             58     78.38%
+				updated:             59     79.73%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            16     21.62%
+				outdated:            15     20.27%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:78%"></div>
+			<div class="updated" style="width:80%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:22%"></div>
+			<div class="outdated" style="width:20%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -476,7 +476,7 @@
 				<p>Implements the OptiFine connected textures format and adds emissive texture support for blocks and items.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-model-features">
