--- a/mods.html
+++ b/mods.html
@@ -202,15 +202,15 @@
 			<!--
 				total mods:          74    100.00%
 				updated:             59     79.73%
-				kind-of updated:     0       0.00%
+				kind-of updated:     3       4.05%
 				kind-of outdated:    0       0.00%
-				outdated:            15     20.27%
+				outdated:            12     16.22%
 				abandoned:           0       0.00%
 			-->
 			<div class="updated" style="width:80%"></div>
-			<div class="kindof-updated" style="width:0%"></div>
+			<div class="kindof-updated" style="width:4%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:20%"></div>
+			<div class="outdated" style="width:16%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -818,7 +818,7 @@
 				<p>Shows both horse health and player hunger while mounted to a horse, donkey, or mule.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="better-statistics-screen">
@@ -1030,7 +1030,7 @@
 				<p>Favorite certain worlds, which will always be at the top of the list.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="fabrishot">
@@ -1044,7 +1044,7 @@
 				<p>Allows for taking screenshots of any resolution.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="jade">
