--- a/mods.html
+++ b/mods.html
@@ -201,14 +201,14 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             59     79.73%
-				kind-of updated:     3       4.05%
+				updated:             60     81.08%
+				kind-of updated:     2       2.70%
 				kind-of outdated:    0       0.00%
 				outdated:            12     16.22%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:80%"></div>
-			<div class="kindof-updated" style="width:4%"></div>
+			<div class="updated" style="width:81%"></div>
+			<div class="kindof-updated" style="width:3%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
 			<div class="outdated" style="width:16%"></div>
 			<div class="abandoned" style="width:0%"></div>
@@ -818,7 +818,7 @@
 				<p>Shows both horse health and player hunger while mounted to a horse, donkey, or mule.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="better-statistics-screen">
