--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             60     81.08%
+				updated:             61     82.43%
 				kind-of updated:     2       2.70%
 				kind-of outdated:    0       0.00%
-				outdated:            12     16.22%
+				outdated:            11     14.86%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:81%"></div>
+			<div class="updated" style="width:82%"></div>
 			<div class="kindof-updated" style="width:3%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:16%"></div>
+			<div class="outdated" style="width:15%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -846,7 +846,7 @@
 				<p>Spices up the boring vanilla blur effect.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="chat-heads">
