--- a/mods.html
+++ b/mods.html
@@ -201,14 +201,14 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             61     82.43%
-				kind-of updated:     2       2.70%
+				updated:             62     83.78%
+				kind-of updated:     1       1.35%
 				kind-of outdated:    0       0.00%
 				outdated:            11     14.86%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:82%"></div>
-			<div class="kindof-updated" style="width:3%"></div>
+			<div class="updated" style="width:84%"></div>
+			<div class="kindof-updated" style="width:1%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
 			<div class="outdated" style="width:15%"></div>
 			<div class="abandoned" style="width:0%"></div>
@@ -1044,7 +1044,7 @@
 				<p>Allows for taking screenshots of any resolution.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="jade">
