--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             62     83.78%
-				kind-of updated:     1       1.35%
+				updated:             64     86.49%
+				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            11     14.86%
+				outdated:            10     13.51%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:84%"></div>
+			<div class="updated" style="width:86%"></div>
 			<div class="kindof-updated" style="width:1%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:15%"></div>
+			<div class="outdated" style="width:14%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -546,7 +546,7 @@
 				<p>Implements the OptiFine custom colors format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="skyboxify">
@@ -1030,7 +1030,7 @@
 				<p>Favorite certain worlds, which will always be at the top of the list.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="fabrishot">
