--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             64     86.49%
+				updated:             65     87.84%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            10     13.51%
+				outdated:            9      12.16%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:86%"></div>
+			<div class="updated" style="width:88%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:14%"></div>
+			<div class="outdated" style="width:12%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -546,7 +546,7 @@
 				<p>Implements the OptiFine custom colors format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.11</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="skyboxify">
