--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             66     89.19%
+				updated:             67     90.54%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            8      10.81%
+				outdated:            7       9.46%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:89%"></div>
+			<div class="updated" style="width:91%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:11%"></div>
+			<div class="outdated" style="width:9%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -389,7 +389,7 @@
 				<p><i>(<a href="https://modrinth.com/mod/nvidium" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="particle-core">
