--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             67     90.54%
+				updated:             69     93.24%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            7       9.46%
+				outdated:            5       6.76%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:91%"></div>
+			<div class="updated" style="width:93%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:9%"></div>
+			<div class="outdated" style="width:7%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -804,7 +804,7 @@
 				<p>Makes the debug screen highly configurable and easier to read.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="better-mount-hud">
@@ -1128,7 +1128,7 @@
 				<p>Adds a notepad to the game UI.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<h2>Dependencies</h2>
