--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             69     93.24%
+				updated:             70     94.59%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            5       6.76%
+				outdated:            4       5.41%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:93%"></div>
+			<div class="updated" style="width:95%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:7%"></div>
+			<div class="outdated" style="width:5%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -632,7 +632,7 @@
 				<p>Fixes bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="modernfix-mvus">
