--- a/mods.html
+++ b/mods.html
@@ -1091,7 +1091,7 @@
 		</div>
 		<div class="mod" id="mod-menu">
 			<div class="mod-icon">
-				<img src="https://cdn.modrinth.com/data/mOgUt4GM/1bfe2006b38340e9d064700e41adf84a8abb1bd4_96.webp" />
+				<img src="https://cdn.modrinth.com/data/mOgUt4GM/5a20ed1450a0e1e79a1fe04e61bb4e5878bf1d20.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
