--- a/mods.html
+++ b/mods.html
@@ -150,7 +150,6 @@
 			}
 		</style>
 		<script>
-			const LATEST_MC_VERSION = '1.21.11';
 			const SEMANTIC_REGEX = /^[0-9]+.[0-9]+(.[0-9]+)?$/;
 
 			const MOD_TYPES = [
@@ -248,7 +247,11 @@
 				]
 			];
 
+			let latestMcRelease = '1.21.11';
+
 			window.onload = async () => {
+				latestMcRelease = await getLatestMinecraftRelease();
+
 				// The DIV for each mod is first created and added to the document.
 				for (let i = 0; i < MOD_TYPES.length && i < MODS.length; i++) {
 					const modList = MODS[i];
@@ -301,8 +304,8 @@
 			}
 
 			async function getLatestVersion(versions) {
-				if (versions.some(version => version === LATEST_MC_VERSION)) {
-					return LATEST_MC_VERSION;
+				if (versions.some(version => version === latestMcRelease)) {
+					return latestMcRelease;
 				}
 
 				let highestMajor = 0;
@@ -349,6 +352,12 @@
 				return versions[0].files[0].url;
 			}
 
+			async function getLatestMinecraftRelease() {
+				const versions = await callGameVersionsApi();
+				const releases = versions.filter(version => version.version_type === 'release');
+				return releases[0].version;
+			}
+
 			async function callApi(api) {
 				const response = await fetch(api);
 				return await response.json();
@@ -362,6 +371,10 @@
 				return await callApi(`https://api.modrinth.com/v2/project/${modSlug}/version?loaders=\[%22fabric%22\]&game_versions=\[%22${mcVersion}%22\]&include_changelog=false`);
 			}
 
+			async function callGameVersionsApi() {
+				return await callApi(`https://api.modrinth.com/v2/tag/game_version`);
+			}
+
 			function createDivHtml(mod) {
 				let status = 'updated';
 				let icon =
@@ -370,7 +383,7 @@
 						<path fill="none" stroke="#9a9a9a" stroke-width="5" d="M51.7 92.5V51.7L16.4 31.3l35.3 20.4L87 31.3 51.7 11 16.4 31.3v40.8l35.3 20.4L87 72V31.3L51.7 11"></path>
 					</svg>`;
 
-				if (mod.version !== LATEST_MC_VERSION) {
+				if (mod.version !== latestMcRelease) {
 					status = 'outdated';
 				}
 
